EKS_Fargate/kubectl/hyperglance.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hyperglance
  labels:
    app: hyperglance
spec:
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  type: NodePort
  selector:
    app: hyperglance

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyperglance
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: "HTTPS"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: '<ACM Certificate ARN>' # [REQUIRED] Set to the ARN of the certificate in ACM you wish to use for the load balancer
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hyperglance
                port: 
                  number: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperglance
spec:
  selector:
    matchLabels:
      app: hyperglance
  replicas: 1
  template:
    metadata:
      labels:
        app: hyperglance
    spec:
      containers:
      - name: postgresql
        image: hyperglance/postgresql:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "1000m"
        volumeMounts:
        - name: postgresql-data
          mountPath: /var/lib/pgsql
          readOnly: false

      - name: httpd
        image: hyperglance/httpd:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        volumeMounts:
        - name: httpd-ssl
          mountPath: /etc/httpd/ssl
          readOnly: true

        - name: hyperglance-data
          mountPath: /etc/httpd/mellon
          subPath: mellon
          readOnly: false

        - name: hyperglance-data
          mountPath: /var/log/httpd
          subPath: httpd_logs
          readOnly: false

      - name: wildfly
        image: hyperglance/wildfly:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "4Gi"
            cpu: "500m"
          limits:
            memory: "8Gi"
            cpu: "2000m"
        volumeMounts:
        - name: hyperglance-data
          mountPath: /var/lib/hyperglance/rules
          subPath: rules
          readOnly: false

        - name: hyperglance-data
          mountPath: /opt/wildfly/standalone/deployments/hgs.ear/lib/common.jar/email.properties
          subPath: email.properties
          readOnly: false

        - name: hyperglance-data
          mountPath: /opt/wildfly/standalone/data/hg.bin
          subPath: hg.bin
          readOnly: false

        - name: hyperglance-data
          mountPath: /opt/wildfly/standalone/log
          subPath: wildfly_logs
          readOnly: false

      volumes:
      - name: postgresql-data
        persistentVolumeClaim:
          claimName: hyperglance-postgresql-data

      - name: httpd-ssl
        secret:
          secretName: hyperglance-httpd-ssl

      - name: hyperglance-data
        persistentVolumeClaim:
          claimName: hyperglance-data

      restartPolicy: Always
      dnsPolicy: ClusterFirst
      hostAliases:
      - ip: '127.0.0.1'
        hostnames:
        - 'httpd'
        - 'wildfly'
        - 'postgresql'
